[tool.poetry]
name = "nn-sandbox"
version = "0.1.0"
description = "Applied introductory learnings from Kaggle course."
authors = ["Kevin Chu <kvnchv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
tensorflow = "2.14.0"
tensorflow-macos = "2.14.0"
tensorflow-io-gcs-filesystem = "0.34.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
mp-api = "^0.37.5"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
